# Flask-Kanban

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: format-with-ruff.yml  lint-and-type.yml
docs/: API.md  DEPLOTMENT.md
src/app/: __init__.py  config.py
src/app/routes/: auth.py  crm.py
src/app/services/: odoo.py
src/app/utils/: auth.py  decorators.py  helpers.py
